tests/snapshots/help__should_render_version_help_from_help_binary.snap
---
source: tests/help.rs
expression: "sdk_help_stdout(\"version\")"
---
Show the SDKMAN! version

Usage: sdk version

Shows the versions of the core and of the native commands. The two are
released separately, so their versions differ.

Options:
  -h, --help
          Print help

Aliases: v

Examples:
  sdk version
